crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_041_Caltron41_6_in_1_Caltron_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-041-Caltron41/6-in-1 (Caltron) [!].zip
rom_sha256=873c50c1a1939963450663c915734dca7d9e7970c21442998e947e4513ee5996
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=0d2c15f959836006
checkpoint f900 fb_fnv1a64=60bfdc68250dfb9c
checkpoint f1100 fb_fnv1a64=953292a1f8c2f1f5
