crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_041_Caltron41_Aladdin_III_1995_Unl_hM03_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-041-Caltron41/Aladdin III (1995) (Unl) [hM03].zip
rom_sha256=6acec95597178a4bc085b0afc6203e32c7afaba91c8a8e1ee692465245aa07ce
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=45f9ea998b73e3b6
checkpoint f900 fb_fnv1a64=021055ef437e8aa5
checkpoint f1100 fb_fnv1a64=021055ef437e8aa5
