crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_041_Caltron41_Caltron_6_in_1_USA_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-041-Caltron41/Caltron - 6 in 1 (USA) (Unl).zip
rom_sha256=918ef91d8cf6d277913ecdb1f2114b3c3a942c9395bc886f45118ae0abf1c94c
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=0d2c15f959836006
checkpoint f900 fb_fnv1a64=60bfdc68250dfb9c
checkpoint f1100 fb_fnv1a64=953292a1f8c2f1f5
