crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_041_Caltron6in1_6_in_1_Caltron.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-041-Caltron6in1/6-in-1 (Caltron) [!].nes
rom_sha256=5f86d60ca55dd97b6e7504744bd56f1a4649ccbd62f16fcb263f01fa81f53902
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=0d2c15f959836006
checkpoint f900 fb_fnv1a64=60bfdc68250dfb9c
checkpoint f1100 fb_fnv1a64=953292a1f8c2f1f5
