crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_041_Caltron6in1_Caltron_6_in_1_USA_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-041-Caltron6in1/Caltron - 6 in 1 (USA) (Unl).nes
rom_sha256=62a6c95245ed12888bf50ad0376b862f2684b72da49847cafb840b7a3aa3495b
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=0d2c15f959836006
checkpoint f900 fb_fnv1a64=60bfdc68250dfb9c
checkpoint f1100 fb_fnv1a64=953292a1f8c2f1f5
